fixed visibility bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,17 +85,10 @@ a {
 
 /* Game */
 
-#quiz-page {
-    display: none;
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-}
-
 .game-section {
     height: 100vh;
     width: 100%;
     display: flex;
-    visibility: hidden;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -174,9 +167,6 @@ a {
 }
 
    /* Results Page */
-
-    #end-page {
-    }
 
     .end-section {
         height: 500px;
